# SpaghettiDev

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  README.md  meson.build  meson_options.txt
.gitlab-ci/: debian-install.sh
Xext/: geext.c  hashtable.c  hashtable.h  meson.build  panoramiX.c  panoramiXprocs.c  saver.c  shm.c  sync.c  syncsrv.h  vidmode.c  vrr.c  vrr.h  xace.c  xace.h  xf86bigfont.c  xres.c  xselinux_ext.c  xselinux_hooks.c  xtest.c  xvmain.c  xvmc.c
Xext/dri2/: dri2.c  dri2ext.c  meson.build
Xext/namespaces/: namespaces.c  namespacesproto.h  namespacesstr.h
Xext/vrr/: meson.build  vrr.c  vrr_priv.h
Xi/: exevents.c  extinit.c  getfctl.c  getprop.c  getselev.c  grabdevb.c  grabdevk.c  listdev.c  selectev.c  xigrabdev.c  xipassivegrab.c  xiquerydevice.c
composite/: compalloc.c  compext.c  compint.h  compositeext.h  compwindow.c
config/: meson.build  udev.c
damageext/: damageext.c
dbe/: midbe.c
dix/: closestr.h  colormap.c  colormap_priv.h  cursor.c  cursor_priv.h  devices.c  dispatch.c  dix_priv.h  dixfonts.c  enterleave.c  events.c  extension.c  gc.c  gestures.c  globals.c  grabs.c  main.c  pixmap.c  property.c  ptrveloc.c  resource.c  touch.c  window.c
doc/: Xinput.xml  Xserver-spec.xml  meson.build  namespaces.man
doc/dtrace/: meson.build
dri3/: dri3.c  dri3_request.c
exa/: exa.c  exa.h  exa_accel.c  exa_priv.h
fb/: fb.h  fballpriv.c  fbpict.c  wfbrename.h
glamor/: glamor.c  glamor.h  glamor_addtraps.c  glamor_composite_glyphs.c  glamor_compositerects.c  glamor_context.h  glamor_copy.c  glamor_core.c  glamor_dash.c  glamor_egl.c  glamor_fbo.c  glamor_font.c  glamor_font.h  glamor_glyphblt.c  glamor_gradient.c  glamor_image.c  glamor_largepixmap.c  glamor_lines.c  glamor_pbo.c  glamor_picture.c  glamor_pixmap.c  glamor_points.c  glamor_prepare.c  glamor_priv.h  glamor_program.c  glamor_program.h  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_spans.c  glamor_sync.c  glamor_text.c  glamor_transfer.c  glamor_trapezoid.c  glamor_utils.c  glamor_utils.h  glamor_vbo.c  glamor_window.c  glamor_xv.c  glxglamor.c  (+2 more)
glx/: createcontext.c  extension_string.c  extension_string.h  glxcmds.c  glxcmdsswap.c  glxcontext.h  glxdrawable.h  glxdri2.c  glxdri3.c  glxdricommon.c  glxdriswrast.c  glxext.c  glxext.h  glxscreens.c  glxscreens.h  glxserver.h  indirect_util.c  indirect_util.h  meson.build  rensize.c
hw/vfb/: InitInput.c  InitOutput.c
hw/xfree86/: meson.build
hw/xfree86/passata/: meson.build  passata.c  passata.h  passata_egl.c  passata_pixmap.c  passata_priv.h  passata_render.c
hw/xfree86/sauce/: meson.build  sauce.c
hw/xfree86/vaccum/: meson.build
hw/xnest/: Color.c  Display.c  Events.c  GC.c  Init.c  Keyboard.c  Screen.c  Window.c
hw/xquartz/: X11Application.m  darwin.c  darwinEvents.c  meson.build  quartz.c  quartzStartup.c
hw/xwin/: InitInput.c  InitOutput.c  meson.build  wincreatewnd.c  windisplay.c  winkeybd.c  winmultiwindowwndproc.c  winprocarg.c  winshadddnl.c  winshadgdi.c
include/: cursor.h  dix.h  dixstruct.h  extinit.h  extinit_priv.h  globals.h  glx_extinit.h  log.h  meson.build  minivec.h  minivec_int.h  minivec_ptr.h  misc.h  opaque.h  os.h  property.h  ptrveloc.h  screenint.h  scrnintstr.h  servermd.h  sp_lilo.h  spaghetti_compat.h  xkbsrv.h  xorg-config.h.meson.in  xorg-server.h.meson.in
man/: Xserver.man  meson.build
meatball/: README.md  alloc.c  atoms.c  buffer.c  buffer_release.c  compositor.c  compositor.h  data_device.c  decoration.c  dmabuf.c  dnd.c  drm_lease.c  egl_renderer.c  ewmh.c  explicit_synchronization.c  fence_ring.c  fns.c  frame_clock.c  icon_surface.c  idle_inhibit.c  keyboard_shortcuts_inhibit.c  log.c  log.h  meatball.c  meatball.h  meson.build  output.c  picture_renderer.c  pointer_constraints.c  pointer_gestures.c  port_gnu.h  positioner.c  primary_selection.c  process.c  region.c  relative_pointer.c  renderer.c  run.c  seat.c  select.c  (+23 more)
meatball/gpu-shaders/: shaders.h
meatball/static-headers/: drm_modifiers.h  transfer_atoms.h
meatball/test/: meson.build
meatball/wayland-proto/: drm-lease-v1.xml  linux-explicit-synchronization-unstable-v1.xml  meson.build  pointer-constraints-unstable-v1.xml  pointer-gestures-unstable-v1.xml  single-pixel-buffer-v1.xml  tearing-control-v1.xml  text-input-unstable-v3.xml  viewporter.xml  xdg-activation-v1.xml  xdg-decoration-unstable-v1.xml  xdg-system-bell-v1.xml
mi/: mi.h  mi_priv.h  miarc.c  midispcur.c  mieq.c  miexpose.c  miglblt.c  miinitext.c  mioverlay.c  mipointer_priv.h  mipolypnt.c  mipolyrect.c  miscrinit.c  mivaltree.c  miwideline.c  miwindow.c
miext/damage/: damage.c
miext/rootless/: rootless.h  rootlessScreen.c  rootlessValTree.c  rootlessWindow.c
miext/shadow/: shadow.c  shadow.h
miext/sync/: misync.c  misyncfd.c  misyncshm.c  misyncshm.h
os/: WaitFor.c  WaitFor.h  access.c  auth.h  client.c  client_priv.h  connection.c  inputthread.c  io.c  log.c  osdep.h  osinit.c  ospoll.c  utils.c  xdmcp.c  xsha1.c
present/: present.c  present.h  present_execute.c  present_priv.h  present_request.c  present_scmd.c  present_screen.c  present_vblank.c
pseudoramiX/: pseudoramiX.c
randr/: randr.c  rroutput.c  rrproperty.c  rrproviderproperty.c  rrscreen.c  rrsdispatch.c
record/: record.c
render/: animcur.c  glyph.c  mipict.c  picture.c  picture.h  render.c
test/: input.c  meson.build  sha1.c  simple-xinit.c
test/bigreq/: request-length.c
vaccum/: meson.build  notes.txt  spirv_builder.c  spirv_builder.h  vaccum.c  vaccum.h  vaccum_copy.c  vaccum_core.c  vaccum_debug.h  vaccum_dri3.c  vaccum_dri3_syncobj.c  vaccum_dri3_syncobj.h  vaccum_glyphbit.c  vaccum_image.c  vaccum_lines.c  vaccum_module.c  vaccum_points.c  vaccum_prepare.c  vaccum_prepare.h  vaccum_priv.h  vaccum_rects.c  vaccum_segs.c  vaccum_spans.c  vaccum_text.c  vaccum_transfer.c  vaccum_transfer.h  vaccum_utils.h  vaccum_vulkan.c  vaccum_ximage.c
xfixes/: cursor.c  disconnect.c  xfixesint.h
xkb/: XKBGAlloc.c  ddxLoad.c  xkb-procs.h  xkb.c  xkbActions.c  xkbEvents.c  xkbInit.c  xkbLEDs.c  xkbUtils.c
(+133 files in other folders)
